// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zosmf API tests should test putContent method passes all options to Zowe api method 1`] = `
Object {
  "encoding": 285,
}
`;

exports[`Zosmf API tests should test that copy data set uses default options 1`] = `
Object {
  "fromDataSet": Object {
    "dataSetName": "IBM.FROM",
    "memberName": "IEFBR14",
  },
}
`;

exports[`Zosmf API tests should test that copy data set uses enq 1`] = `
Object {
  "enq": "SHR",
  "fromDataSet": Object {
    "dataSetName": "BROADCOM.FROM",
  },
}
`;

exports[`Zosmf API tests should test that copy data set uses enq only 1`] = `
Object {
  "enq": "SHR",
  "fromDataSet": Object {
    "dataSetName": "IBM.FROM",
    "memberName": "IEFBR14",
  },
}
`;
